--- a/ui/Ui/App.xaml
+++ b/ui/Ui/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="IkariamPlanner.App"
+﻿<Application x:Class="IkariamPlanner.Ui.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:IkariamPlanner"
+             xmlns:local="clr-namespace:IkariamPlanner.Ui"
              ShutdownMode="OnExplicitShutdown">
     <Application.Resources>
 
